[gd_scene load_steps=2 format=3 uid="uid://bnmbbvw7s6jsy"]

[ext_resource type="Script" uid="uid://bpug0cau30obh" path="res://scripts/development_ui.gd" id="1_dnw6o"]

[node name="DevelopmentUI" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_dnw6o")

[node name="CubesCountLabel" type="Label" parent="."]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_top = -11.5
offset_right = 173.0
offset_bottom = 11.5
grow_vertical = 2
text = "current cubes count: 0"

[node name="CubeJsonContentLabel" type="Label" parent="."]
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -23.0
grow_horizontal = 2
grow_vertical = 0
text = "{cube json}"
horizontal_alignment = 1
vertical_alignment = 1
